Update README.md. Add learning goal drafts. Add index page. Add WIP contact page. Added index page to navigation bar.

--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/1.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/1.md
@@ -1,3 +1,15 @@
-﻿# Yay it works!
+﻿# Leerdoel 1 - SVN
+Toen ik begon met mijn stage, kwam ik er al snel achter dat Ranshuijsen gebruik maakte van Subversion (SVN). SVN is een versiebeheersysteem (zoals bijvoorbeeld Git), waarmee broncode van software projecten kan worden beheerd. Omdat ik nog nooit met SVN had gewerkt, was ik benieuwd wat de voor- en nadelen van dit systeem zijn, en hoe het precies werkt. Om hierachter te komen, heb ik tijdens mijn stage gebruik gemaakt van SVN.
 
-[test](Content/Leerdoelen/1)
+Het grootste verschil tussen Git en SVN is dat SVN gecentraliseerd is. Al het werk van een ontwikkelingsteam wordt ten allen tijden opgeslagen op een centrale SVN repository. Mocht het voorkomen dat een medewerker om wat voor reden dan ook geen verbinding kan maken met deze repository, dan kan hij geen gebruik maken van de functionaliteit die SVN biedt. Dit maakt SVN onhandig voor mensen die regelmatig onderweg werken aan hun projecten.
+
+Echter is SVN hierdoor wel veel minder complex dan Git, en daarom makkelijker om te leren. Omdat alles gecentraliseerd is, zijn er minder acties nodig om bepaalde taken uit te voeren. Neem bijvoorbeeld het uploaden van wijzigingen naar de hoofd-repository; Git heeft hier 2 commandos voor nodig, terwijl SVN dit met 1 commando doet.
+
+SVN is daarom niet per se beter of slechter dan Git, maar is simpelweg gewoon anders. Persoonlijk zal ik Git blijven gebruiken, omdat ik vaak op meerdere locaties aan mijn projecten werk en niet afhankelijk wil zijn van een internetverbinding.
+
+De onderstaande screenshots laten zien dat ik tijdens mijn stage gebruik heb gemaakt van SVN.
+
+**TODO Screenshots**
+
+## Feedback bedrijfsbegeleider/collega
+## Reflectie
