--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/3.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/3.md
@@ -1,3 +1,10 @@
-﻿# Yay it works!
+﻿# Leerdoel 3 - Projecten Analyseren
 
-[test](Content/Leerdoelen/1)
+Het is altijd erg lastig om als nieuw lid van een ontwikkelingsteam mee te werken aan een bestaand systeem, vooral als je weinig programmeerervaring hebt. Je hebt vaak geen idee hoe het systeem is opgebouwd, en bent daarom vaak lang bezig met het onderzoeken van de structuur voordat je echt kan gaan beginnen met werken. Om hier beter in te worden, heb ik besloten om hier een leerdoel van te maken.
+
+Als onderdeel van mijn stageopdracht heb ik moeten werken in het Customer Relations Management (CRM) systeem van RvL. Dit systeem moest ik omzetten naar Blazor. Omdat het CRM systeem echter in het oude .NET Framework was gebouwd, moest ik eerst alles overzetten naar .NET Core. Om dit te kunnen doen heb ik ruim twee weken besteed aan het onderzoeken van de structuur van het systeem. **TODO werkwijze** Vervolgens heb ik als bewijsmateriaal voor dit leerdoel een document opgezet waarin een globale beschrijving van het systeem staat.
+
+**TODO Documentlocatie?**
+
+## Feedback bedrijfsbegeleider/collega
+## Reflectie
