--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/10.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/10.md
@@ -1,14 +1,10 @@
-﻿# Leerdoel 9 - Informatiebeveiligings Cursus
-Na afloop van Week 2 wilde ik bekend zijn met de regels en procedures die RvL hanteert. Dit heb ik gelijk op de tweede dag van mijn stage gedaan door het succesvol maken van de Informatiebeveiliging Cursus die elke nieuwe medewerker en stagiair moet volgen.
+﻿# Leerdoel 10 - Design
+Toen ik bezig was met het bedenken van leerdoelen, heb ik mijn bedrijfsbegeleider om advies gevraagd. Het viel hem op dat ik weinig aandacht besteedde aan de opmaak en uiterlijk van de documenten, waardoor ze waarschijnlijk niet zouden opvallen tussen de documenten van andere studenten. Ik heb daarom besloten dat ik meer wilde leren over hoe ik de opmaak van mijn documenten kan verbeteren.
 
-De onderstaande screenshot laat zien dat ik alle modules en toetsen die bij deze cursus horen succesvol heb afgerond.
- 
-![](Assets/Cursus.png)
+TODO werkwijze
 
-De cursus is opgebouwd uit verschillende teksten en videos met informatie. Na het doorlezen van sommige modules volgt er een korte toets met een aantal meerkeuzevragen over het materiaal van die module. Ik heb deze toetsen allemaal met een 10 afgerond.
+Om dit leerdoel te behalen heb ik tijdens het opzetten van alle eerder genoemde documenten, mijn [Stageplan](Assets/Stageplan.docx), en dit Portfolio meer aandacht besteed aan de opmaak. Deze documenten dienen daarom ook als bewijsmateriaal voor dit leerdoel.
 
-Deze cursus bevat een uitleg over de Algemene Verordening Gegevensbescherming (AVG), en hoe RvL hier mee omgaat. Hierbij werd mij ook een PDF van Het Blauwe Boekje gegeven, een boek dat extra uitleg geeft over de AVG met betrekking tot softwareontwikkeling.
+## Feedback bedrijfsbegeleider/collega
 
-Ook bevat deze cursus onder andere het wachtwoordbeleid van RvL, de procedure voor toegangsbeveiliging, en de Clean Desk (houd je werkplek netjes) en Clear Screen (vergrendel je scherm als je je werkplek verlaat) regels.
-
-Na het afronden van deze cursus had ik een veel beter idee van de regels en procedures die RvL en waarschijnlijk ook andere software bedrijven hanteren. Een deel van de regels waren voor mij vrij vanzelfsprekend (bijvoorbeeld de Clear Screen regel), maar ik wist bijvoorbeeld nog niks over de procedure die gevolgd moet worden in het geval van een datalek.
+## Reflectie
