Add stageopdracht. Fix broken link to contact page on 404 page. Fix CI/CD pipeline order in leerdoel 8

--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/8.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/8.md
@@ -16,8 +16,8 @@ Het script werkt als volgt;
 * .NET Core wordt klaargemaakt voor gebruik,
 * Alle _unit tests_ (zie [Leerdoel 5 - Testen](Content/Stage3/Leerdoelen/5)) worden uitgevoerd. Mocht er een test mislukken, dan zal de update direct worden gestopt.
 * De website wordt genereerd. Alle bestanden worden door .NET Core klaargemaakt zodat een browser ze zou kunnen laden.
-* Een fix wordt toegepast zodat 404-foutpaginas worden doorgestuurd naar de hoofdpagina van mijn website, zodat Blazor ze zelf kan afhandelen in plaats van dat GitHub dit doet.
 * De _base tag_ wordt aangepast, zodat alle pagina links binnen in de website correct zullen functioneren.
+* Een fix wordt toegepast zodat 404-foutpaginas worden doorgestuurd naar de hoofdpagina van mijn website, zodat Blazor deze fouten zelf kan afhandelen in plaats van dat GitHub dit doet.
 * Een fix wordt toegepast die een conflict met Jekyll oplost. Jekyll is een systeem dat Markdown en andere bestanden kan omzetten naar statische websites, en zit ingebouwd in [GitHub Pages](https://pages.github.com/). Dit zorgt er echter voor dat Blazor niet meer werk. Deze stap verteld GitHub om Jekyll uit te zetten door een leeg bestand genaamd `.nojekyll` in de map van de website te plaatsen.
 * De website wordt gepubliceerd naar GitHub pages. Dit wordt gedaan doormiddel van [github-pages-deploy-action](https://github.com/JamesIves/github-pages-deploy-action).
 
