--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/7.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/7.md
@@ -22,7 +22,7 @@ Dit kan worden opgelost doormiddel van Dependency Injection. In plaats van dat d
 
 ## Bewijsmateriaal
 
-Zoals vermeld in [Leerdoel 2 - Nieuwe Technologie](Content/Stage3/Leerdoelen/2), is deze website gemaakt met Blazor.
+Zoals vermeld in [Leerdoel 2 - Nieuwe Technologie](Content/Stage3/Leerdoelen/2), is deze website gemaakt met Blazor. Blazor heeft het Dependency Injection design pattern al geimplementeerd, en geeft ontwikkelaars de mogelijkheid om hier verder op te bouwen.
 
 TODO
 
