Finish MatBlazor integration

--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/9.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/9.md
@@ -1,4 +1,4 @@
-﻿# Leerdoel 9 - Informatiebeveiligings Cursus
+﻿# Leerdoel 9 - Regels & Procedures
 
 Na afloop van Week 2 wilde ik bekend zijn met de regels en procedures die RvL hanteert. Dit heb ik gelijk op de tweede dag van mijn stage gedaan door het succesvol maken van de Informatiebeveiliging Cursus die elke nieuwe medewerker en stagiair moet volgen.
 
