Content changes. Style tweaks. Added unit tests for DocumentService.

--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/2.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/2.md
@@ -6,7 +6,7 @@ Als onderdeel van mijn stageopdracht heb ik het CRM systeem van Ranshuijsen deel
 Ik heb aan dit leerdoel gewerkt door middel van mijn stageopdracht. Pagina-voor-pagina heb ik een deel van het CRM systeem omgezet naar Blazor, en zodoende geleerd hoe dit framework werkt.
 
 ## Blazor
-[Blazor](https://dotnet.microsoft.com/apps/aspnet/web-apps/blazor) is een onderdeel van het ASP.NET Core framework. Terwijl de meeste interactieve websites gebouwd zijn met behulp van JavaScript, geeft Blazor ontwikkelaars de mogelijkheid om websites te bouwen met C# code. Dit maakt het mogelijk om code in de backend te gebruiken
+[Blazor](https://dotnet.microsoft.com/apps/aspnet/web-apps/blazor) is een onderdeel van het ASP.NET Core. Terwijl de meeste interactieve websites gebouwd zijn met behulp van JavaScript, geeft Blazor ontwikkelaars de mogelijkheid om websites te bouwen met C# code.
 
 Op het moment zijn er twee varianten van Blazor beschikbaar. De eerste variant is Blazor Server, waarbij alle C# code op de server wordt uitgevoerd. De browser download alleen een klein JavaScript package, en gebruikt deze om via een zogehete *SignalR* verbinding te maken met de server. Alle acties van de client (bijvoorbeeld button clicks) en alle UI updates van de server worden via deze verbinding verzonden. Deze variant vereist een server om alle code op uit te voeren, en werkt daardoor niet met statische webservers zoals [GitHub Pages](https://pages.github.com/).
 
