--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/6.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/6.md
@@ -1,13 +1,18 @@
 ﻿# Leerdoel 6 - Ideeën uitwerken
 
-Een aantal maanden voordat ik met mijn stage begon, had ik een idee voor een hobbyproject. Het bleek echter al snel dat dit project zeer complex zou zijn, waardoor ik weinig vooruitgang maakte en uiteindelijk mijn motivatie verloor.
+In mijn vrije tijd doe ik vrijwillergerswerk als moderator van de Minecraft community op Reddit. Mijn taken hierbij bestaan onder andere uit het handhaven van de community-regels en het verwijderen van overtredende posts. Enkele maanden voor mijn stage besefte ik dat een groot deel van dit werk zou kunnen automatiseren doormiddel van een Reddit bot. Het zou bijvoorbeeld niet moeilijk moeten zijn om te controleren of een gebruiker te vaak dingen upload. Een dergelijke bot zou de werkdruk van de moderators flink kunnen verlagen, en zou ervoor zorgen dat wij sneller en op een consistentere manier kunnen reageren op meldingen van gebruikers.
 
-Om dit te voorkomen wilde ik tijdens mijn stage leren hoe ik een idee het beste verder kon uitwerken en op papier te zetten. Hierdoor zou het voor mij makkelijker zijn om het systeem te bouwen, omdat alles al van tevoren is uitgedacht en gepland.
+Toen ik echter begon aan dit project, kwam ik er al snel achter dat een dergelijke bot veel complexer zou zijn dan ik had verwacht. Ik moest regelmatig mijn werk stilleggen omdat ik iets over het hoofd had gezien. Ook zat ik vaak stukken code te herschrijven, zonder veel vooruitgang te maken. Ik verloor daarom ook al snel mijn motivatie, en legde het project neer.
 
-Als bewijsmateriaal voor dit leerdoel heb ik een document opgezet waarin ik beschrijf wat mijn eerder genoemde idee inhoudt, wat voor een functionaliteit het systeem zal bevatten, en hoe het systeem is gestructureerd. TODO werkwijze Op basis van dit document zal ik in de toekomst eventueel alsnog aan het project kunnen beginnen.
+Om te voorkomen dat ik ditzelfde probleem later opnieuw tegen kom, heb ik hier een leerdoel van gemaakt. Ik zou graag willen leren hoe grote, complexe systemen worden uitgeplant in een professionele omgeving, zodat ik deze kennis toe kan passen op mijn eigen projecten.
 
-**TODO Documentlocatie?**
+## Werkwijze
 
+
+## Bewijsmateriaal
+Als bewijsmateriaal voor dit leerdoel heb ik een document opgezet waarin ik beschrijf wat mijn eerder genoemde idee inhoudt, wat voor een functionaliteit het systeem zal bevatten, en hoe het systeem is gestructureerd. Op basis van dit document zal ik in de toekomst eventueel alsnog aan het project kunnen beginnen.
+
+Dit document is [hier](Content/Stage3/Evidence/6) te vinden.
 
 ## Feedback bedrijfsbegeleider/collega
 ## Reflectie
