--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/8.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/8.md
@@ -2,9 +2,10 @@
 
 Naast Design Patterns, ben ik tijdens het zoeken naar informatie ook vaak de termen Continuous Integration en Continuous Deployment (CI/CD) tegengekomen. Deze termen verwijzen naar systemen die automatisch nieuwe versies van programma’s kunnen testen en uitrollen naar servers. Ik wist echter niet hoe ik zelf een dergelijk systeem kon opzetten, of wat het nut hiervan precies was. Ik heb daarom besloten om hier een leerdoel van te maken.
 
-**TODO werkwijze**
+## Werkwijze
 
-# Bewijsmateriaal
+
+## Bewijsmateriaal
 
 Ook deze website maakt gebruik van een CI/CD pipeline. Deze Pipeline is opgezet met behulp van [GitHub Actions](https://github.com/features/actions).
 
