--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/4.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/4.md
@@ -1,11 +1,17 @@
 ﻿# Leerdoel 4 - Advies
 Als ik een technologie goed wil beheersen, dan moet ik ook kunnen achterhalen wat de voor- en nadelen van deze technologie zijn. Deze informatie zou ik vervolgens kunnen gebruiken om een advies te geven over de bruikbaarheid van een technologie. Ik heb besloten hier een leerdoel van te maken.
 
-**TODO werkwijze**
+## Werkwijze
 
+Ik ben van mening dat een ontwikkelaar het beste een beeld van een technologie kan krijgen door het simpelweg te gebruiken. Er zijn genoeg blog posts en nieuwsartiekelen die de voor- en nadelen van een technologie laten zien, maar dit doen zij allemaal vanaf hun eigen perspectief. Wat zij als voordelen zien, zou voor u juist nadeling kunnen zijn. En wat zij als nadelen zien, kan voor u juist voordelig zijn.
+
+Daarom heb ik de voor- en nadelen van Blazor onderzocht door deze technologie te gebruiken tijdens mijn stageopdracht, en tijdens het opzetten van mijn portfolio. Ik heb hierdoor een goed beeld van de technologie weten op te bouwen.
+
+## Bewijsmateriaal
 Om dit leerdoel te behalen heb ik besloten om een kort adviesrapport te schrijven, die beschrijft wat de voor- en nadelen van Blazor zijn, en of Blazor daadwerkelijk bruikbaar is voor de complexe projecten waar bedrijven vaak aan werken.
 
-**TODO Documentlocatie?**
+Het adviesrapport is [hier](Content/Stage3/Evidence/4) te vinden.
+
 
 ## Feedback bedrijfsbegeleider/collega
 ## Reflectie
