--- a/Portfolio/Pages/Content/Stage3/Evidence/4.md
+++ b/Portfolio/Pages/Content/Stage3/Evidence/4.md
@@ -1,18 +1,40 @@
 ﻿# Adviesrapport Blazor
 ## Inleiding
 
-Dit document beschrijft de voor- en nadelen van [Blazor](https://dotnet.microsoft.com/apps/aspnet/web-apps/blazor), een onderdeel van Microsoft ASP.NET Core. Blazor geeft ontwikkelaars de mogelijkheid om interactieve websites te bouwen met behulp van C# in plaats van JavaScript. Dit betekent dat de gehele Microsoft .NET library en vele andere libraries van derden allemaal beschikbaar zijn voor gebruik in een frontend voor een systeem.
+Dit document beschrijft de voor- en nadelen van [Blazor](https://dotnet.microsoft.com/apps/aspnet/web-apps/blazor). Het dient als bewijsmateriaal voor [Leerdoel 4 - Advies](Content/Stage3/Leerdoelen/4)
 
-Dit document dient als bewijsmateriaal voor [Leerdoel 4 - Advies](Content/Stage3/Leerdoelen/4)
+## Blazor
+Blazor is een onderdeel van Microsoft ASP.NET Core. Blazor geeft ontwikkelaars de mogelijkheid om interactieve websites te bouwen met behulp van C# in plaats van JavaScript.
+
+Op het moment zijn er twee varianten van Blazor beschikbaar. De eerste variant is Blazor Server, waarbij alle C# code op de server wordt uitgevoerd. De browser download alleen een klein JavaScript package, en gebruikt deze om via een zogehete *SignalR* verbinding te maken met de server. Alle acties van de client (bijvoorbeeld button clicks) en alle UI updates van de server worden via deze verbinding verzonden. Deze variant vereist een server om alle code op uit te voeren, en werkt daardoor niet met statische webservers zoals [GitHub Pages](https://pages.github.com/).
+
+De tweede variant is Blazor WebAssembly (Blazor WASM). Deze variant stuurt de gehele Blazor applicatie, alle dependencies, en een kleine versie van de .NET Runtime naar de browser. De gehele applicatie wordt dan uitgevoerd binnen de browser, net zoals de meeste websites dit doen. In tegenstelling tot Blazor Server kan Blazor WebAssembly wel worden gebruikt samen met statische webservers, omdat er geen aparte server nodig is. Als de browser alle benodigde bestanden kan downloaden, dan is dat voldoende.
+
+Microsoft is bezig met het ontwikkelen van drie andere Blazor varianten, die elk weer in andere scenarios handig kunnen zijn. Op het moment is er weinig informatie over deze varianten beschikbaar.
+
+Voor meer informatie over de verschillende varianten van Blazor, zie de [ASP.NET Core Blazor hosting models](https://docs.microsoft.com/en-us/aspnet/core/blazor/hosting-models?view=aspnetcore-3.1) pagina op de officiele Microsoft website.
 
 ## Voordelen
-De voordelen van Blazor zijn als volgt;
+De algemene voordelen van Blazor zijn als volgt;
 
-### 
+ * De gehele Microsoft .NET library en alle libraries van derden kunnen gebruikt worden in het bouwen van een frontend. Ook is het mogelijk om JavaScript code en libraries te gebruiken vanuit C# code.
+ * Het gehele framework is Open-Source. U kunt daarom precies zien hoe Blazor van binnen werkt, en is het ook mogelijk om uw eigen verbeteringen of _fork_ te maken.
+
+De voordelen van Blazor WASM zijn als volgt;
+ * Met Blazor WASM wordt alle C# code eerst gecompileerd voordat het naar de browser wordt verstuurd. Deze gecompileerde code is over het algemeen sneller dan JavaScript, al zal dit verschil alleen merkbaar zijn voor enorm grote, hardware-intensieve applicaties.
+ * Het is mogelijk om code die gebruikt wordt in een C# backend te hergebruiken in een Blazor WASM frontend. Dit zorgt voor meer consistentie in bijvoorbeeld in- en outputvalidatie.
+
+De voordelen van Blazor Server zijn als volgt;
+* Omdat alle code op de server draait, is het niet nodig om ingevoerde gevens in de front- en backend apart te valideren. Neem bijvoorbeeld een veld voor emailadressen. Normaalgesproken zou de frontend controleren of de ingevoerde text een correct emailadres is, waarna de text wordt verstuurd naar de backend die vervolgens dezelfde controle uitvoert. Met Blazor Server is dit overbodig, omdat de frontend zelf geen enkele controles doet.
 
 ## Nadelen
-De nadelen van Blazor zijn als volgt;
+Elke technologie heeft natuurlijk ook nadelen. De algemene nadelen van Blazor zijn als volgt;
+* Niet alle frontend developers zullen bekend zijn met C#. Zij zullen dit eerst moeten leren voordat ze met Blazor kunnen gaan werken, wat tijd en geld kan kosten.
 
-### 
+De nadelen van Blazor WASM zijn als volgt;
+* De eerste keer dat een Blazor WASM applicatie uitgevoerd kan worden, moet de browser eerst een versie van de .NET Runtime downloaden. Deze versie is kleiner dan de normale versie, maar is nog steeds ongeveer 2.5 MB, wat waarschijnlijk enorm is vergeleken met de grootte van uw applicatie.
+* Er is op het moment weinig ondersteuning voor debugging tools zoals andere C# applicaties hebben. Dit kan betekenen dat het meer tijd zal kosten voor ontwikkelaars om bepaalde bugs te vinden.
+* Microsoft Internet Explorer en een groot deel van de internetbrowsers die Thin Clients vaak gebruiken hebben geen ondersteuning voor WebAssembly, waardooe Blazor WASM hierop niet zal werken. Dit kan een groot nadeel zijn voor organisaties die deze software en/of systemen gebruiken.
 
-## Bruikbaarheid
+De nadelen van Blazor Server zij als volgt;
+* Omdat alle C# code op de server draait, is Blazor Server over het algemeen zwaarder om te draaien dan andere webframeworks, zoals ASP.NET. Dit betekent dat er in sommige gevallen een krachtigere server nodig is om het systeem te kunnen draaien.
