--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/10.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/10.md
@@ -1,8 +1,12 @@
 ﻿# Leerdoel 10 - Design
 Toen ik bezig was met het bedenken van leerdoelen, heb ik mijn bedrijfsbegeleider om advies gevraagd. Het viel hem op dat ik weinig aandacht besteedde aan de opmaak en uiterlijk van de documenten, waardoor ze waarschijnlijk niet zouden opvallen tussen de documenten van andere studenten. Ik heb daarom besloten dat ik meer wilde leren over hoe ik de opmaak van mijn documenten kan verbeteren.
 
-TODO werkwijze
+## Werkwijze
 
+//Material design  
+//Cover pages in word
+
+## Bewijsmateriaal
 Om dit leerdoel te behalen heb ik tijdens het opzetten van alle eerder genoemde documenten, mijn [Stageplan](Assets/Stageplan.docx), en dit Portfolio meer aandacht besteed aan de opmaak. Deze documenten dienen daarom ook als bewijsmateriaal voor dit leerdoel.
 
 ## Feedback bedrijfsbegeleider/collega
