--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/5.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/5.md
@@ -1,12 +1,9 @@
 ﻿# Leerdoel 5 - Testen
 Het testen van software is zeer belangrijk. Als een bedrijf software oplevert waar veel en/of grote fouten in zitten, dan kan dit veel tijd en geld kosten. Om deze redenen wilde ik tijdens mijn stage leren hoe ik mijn code op een professionele manier kan testen, zodat ik kan garanderen dat mijn code foutloos werkt.
 
-**TODO werkwijze**
+# Werkwijze
 
-In Bijlage 1 staat een link naar een GitHub repository waarin een voorbeeldprogramma staat. Dit programma bevat meerdere Unit Tests, die geïntegreerd zijn in de CI/CD pipeline (zie leerdoel 8). Ook heb ik een testplan opgezet waarin staat beschreven hoe ik dit programma heb getest.
-
-**TODO Documentlocatie?**
-
+# Bewijsmateriaal
 
 ## Feedback bedrijfsbegeleider/collega
 ## Reflectie
