--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/9.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/9.md
@@ -1,6 +1,8 @@
 ﻿# Leerdoel 9 - Regels & Procedures
+## Inleiding
+Na afloop van Week 2 wilde ik bekend zijn met de regels en procedures die RvL hanteert.
 
-Na afloop van Week 2 wilde ik bekend zijn met de regels en procedures die RvL hanteert. Dit heb ik gelijk op de tweede dag van mijn stage gedaan door het succesvol maken van de Informatiebeveiliging Cursus die elke nieuwe medewerker en stagiair moet volgen.
+Als onderdeel hiervan heb ik gelijk op de tweede dag van mijn stage gedaan door het succesvol maken van de Informatiebeveiliging Cursus die elke nieuwe medewerker en stagiair moet volgen.
 
 De onderstaande screenshot laat zien dat ik alle modules en toetsen die bij deze cursus horen succesvol heb afgerond.
  
