Content updates. Styling tweaks. Fix navbar evidence links pointing to leerdoel docs instead of evidence docs

--- a/Portfolio/Pages/Content/Stage3/Evidence/4.md
+++ b/Portfolio/Pages/Content/Stage3/Evidence/4.md
@@ -1,7 +1,7 @@
 ﻿# Adviesrapport Blazor
 ## Inleiding
 
-Dit document beschrijft de voor- en nadelen van [Blazor](https://dotnet.microsoft.com/apps/aspnet/web-apps/blazor). Het dient als bewijsmateriaal voor [Leerdoel 4 - Advies](Content/Stage3/Leerdoelen/4)
+Dit document beschrijft de belangrijkste voor- en nadelen van [Blazor](https://dotnet.microsoft.com/apps/aspnet/web-apps/blazor). Het dient als bewijsmateriaal voor [Leerdoel 4 - Advies](Content/Stage3/Leerdoelen/4)
 
 ## Blazor
 Blazor is een onderdeel van Microsoft ASP.NET Core. Blazor geeft ontwikkelaars de mogelijkheid om interactieve websites te bouwen met behulp van C# in plaats van JavaScript.
@@ -17,15 +17,20 @@ Voor meer informatie over de verschillende varianten van Blazor, zie de [ASP.NET
 ## Voordelen
 De algemene voordelen van Blazor zijn als volgt;
 
- * De gehele Microsoft .NET library en alle libraries van derden kunnen gebruikt worden in het bouwen van een frontend. Ook is het mogelijk om JavaScript code en libraries te gebruiken vanuit C# code.
+ * De gehele Microsoft .NET library en alle libraries van derden kunnen gebruikt worden in het bouwen van een frontend. Ook is het mogelijk om alsnog JavaScript code en libraries aan te toepen vanuit uw C# code.
  * Het gehele framework is Open-Source. U kunt daarom precies zien hoe Blazor van binnen werkt, en is het ook mogelijk om uw eigen verbeteringen of _fork_ te maken.
+ * Net zoals React, is Blazor component-based. Dit betekent dat de gehele website is opgebouwd uit losse, herbruikbare componenten. U kunt bijvoorbeeld een component bouwen die het weer laat zien, en deze vervolgens op meerdere paginas gebruiken zonder dat u de code hiervan steeds moet kopieeren.
 
 De voordelen van Blazor WASM zijn als volgt;
  * Met Blazor WASM wordt alle C# code eerst gecompileerd voordat het naar de browser wordt verstuurd. Deze gecompileerde code is over het algemeen sneller dan JavaScript, al zal dit verschil alleen merkbaar zijn voor enorm grote, hardware-intensieve applicaties.
  * Het is mogelijk om code die gebruikt wordt in een C# backend te hergebruiken in een Blazor WASM frontend. Dit zorgt voor meer consistentie in bijvoorbeeld in- en outputvalidatie.
+ * In tegenstelling tot Blazor Server, zal een Blazor WASM applicatie blijven werken zelfs als de webserver offline gaat. Het is daarom ook mogelijk om *serverless deployment* te gebruiken, via bijvoorbeeld een CDN.
 
 De voordelen van Blazor Server zijn als volgt;
 * Omdat alle code op de server draait, is het niet nodig om ingevoerde gevens in de front- en backend apart te valideren. Neem bijvoorbeeld een veld voor emailadressen. Normaalgesproken zou de frontend controleren of de ingevoerde text een correct emailadres is, waarna de text wordt verstuurd naar de backend die vervolgens dezelfde controle uitvoert. Met Blazor Server is dit overbodig, omdat de frontend zelf geen enkele controles doet.
+* Het enige dat de browser van de server moet download is een klein JavaScript pakket dat de verbinding met de server opzet. Dit zorgt ervoor dat de applicatie zeer snel kan laden.
+* Aangezien alle code op de server draait, is de applicatie zeer licht voor de browser. Gebruikers kunnen daarom ook op oudere computers Blazor Server applicaties gebruiken, mits ze een moderne internetbrowser gebruiken.
+ * De ontwikkelaars van uw systeem hebben maar 1 programmeertaal nodig om uw gehele systeem te bouwen; C#.
 
 ## Nadelen
 Elke technologie heeft natuurlijk ook nadelen. De algemene nadelen van Blazor zijn als volgt;
@@ -38,3 +43,5 @@ De nadelen van Blazor WASM zijn als volgt;
 
 De nadelen van Blazor Server zij als volgt;
 * Omdat alle C# code op de server draait, is Blazor Server over het algemeen zwaarder om te draaien dan andere webframeworks, zoals ASP.NET. Dit betekent dat er in sommige gevallen een krachtigere server nodig is om het systeem te kunnen draaien.
+* Blazor Server applicaties hebben altijd een verbinding nodig met de backend. Mocht deze verbinding worden verbroken, dan zal de gehele applicatie niet meer werken. Blazor WASM heeft dit probleem niet, omdat in dat geval de gehele applicatie naar de browser wordt verstuurd.
+* Vrijwel alle acties die gebruikers binnen uitvoeren moet via de SignalR verbinding naar de server worden verzonden, wat voor extra netwerkactiviteit zorgt. Ook betekent dit dat indien uw netwerk niet snel genoeg is of overbelast raakt, de applicatie zeer traag zal werken.
