Content updates. Remove dead navigation link. Update contact page style

--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/2.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/2.md
@@ -3,7 +3,7 @@ Het is belangrijk voor softwareontwikkelaars en andere ICT-medewerkers om mee te
 
 Als onderdeel van mijn stageopdracht heb ik het CRM systeem van Ranshuijsen deels omgezet naar Blazor, een redelijk nieuw onderdeel van Microsoft’s ASP.NET Core framework. Ik heb dan ook dit leerdoel behaald door deze technologie te bestuderen en te gebruiken.
 
-Ik heb aan dit leerdoel gewerkt door middel van mijn stageopdracht. Pagina-voor-pagina heb ik een deel van het CRM systeem omgezet naar Blazor, en zodoende geleerd hoe dit framework werkt.
+Ik heb aan dit leerdoel gewerkt door middel van mijn stageopdracht, en door dit portfolio. Tijdens mijn stageopdracht heb ik een deel van het CRM omgezet naar Blazor. Ook heb ik dit gehele portfolio gebruikt met behulp van Blazor WebAssembly.
 
 ## Blazor
 [Blazor](https://dotnet.microsoft.com/apps/aspnet/web-apps/blazor) is een onderdeel van het ASP.NET Core. Terwijl de meeste interactieve websites gebouwd zijn met behulp van JavaScript, geeft Blazor ontwikkelaars de mogelijkheid om websites te bouwen met C# code.
@@ -18,7 +18,7 @@ Voor meer informatie over de verschillende varianten van Blazor, zie de [ASP.NET
 
 ## Bewijsmateriaal
 
-Deze website dient deels als bewijs dat ik dit leerdoel heb gehaald. Ik heb namelijk gebruik gemaakt van Blazor WebAssembly om deze website te maken. De broncode van deze website is te vinden op [GitHub](https://github.com/TehNolz/Portfolio).
+Deze website dient deels als bewijs dat ik dit leerdoel heb gehaald, omdat deze is gemaakt bet hehulp van Blazor WASM. De broncode van deze website is te vinden op [GitHub](https://github.com/TehNolz/Portfolio).
 
 ## Feedback bedrijfsbegeleider/collega
 ## Reflectie
