--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/4.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/4.md
@@ -3,14 +3,14 @@ Als ik een technologie goed wil beheersen, dan moet ik ook kunnen achterhalen wa
 
 ## Werkwijze
 
-Ik ben van mening dat een ontwikkelaar het beste een beeld van een technologie kan krijgen door het simpelweg te gebruiken. Er zijn genoeg blog posts en nieuwsartiekelen die de voor- en nadelen van een technologie laten zien, maar dit doen zij allemaal vanaf hun eigen perspectief. Wat zij als voordelen zien, zou voor u juist nadeling kunnen zijn. En wat zij als nadelen zien, kan voor u juist voordelig zijn.
+Ik ben van mening dat een ontwikkelaar het beste een beeld van een technologie kan krijgen door het simpelweg zelf te gebruiken. Er zijn genoeg blog posts en nieuwsartiekelen die de voor- en nadelen van een technologie laten zien, maar dit doen zij allemaal vanaf hun eigen perspectief. Wat zij als voordelen zien, zou voor u juist nadeling kunnen zijn. En wat zij als nadelen zien, kan voor u juist voordelig zijn.
 
 Daarom heb ik de voor- en nadelen van Blazor onderzocht door deze technologie te gebruiken tijdens mijn stageopdracht, en tijdens het opzetten van mijn portfolio. Ik heb hierdoor een goed beeld van de technologie weten op te bouwen.
 
 ## Bewijsmateriaal
 Om dit leerdoel te behalen heb ik besloten om een kort adviesrapport te schrijven, die beschrijft wat de voor- en nadelen van Blazor zijn, en of Blazor daadwerkelijk bruikbaar is voor de complexe projecten waar bedrijven vaak aan werken.
 
-Het adviesrapport is [hier](Content/Stage3/Evidence/4) te vinden.
+Het adviesrapport is [hier](Content/Stage3/Bewijsmateriaal/4) te vinden.
 
 
 ## Feedback bedrijfsbegeleider/collega
