--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/5.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/5.md
@@ -1,5 +1,5 @@
 ﻿# Leerdoel 5 - Testen
-Het testen van software is zeer belangrijk. Als een bedrijf software oplevert waar veel en/of grote fouten in zitten, dan kan dit veel tijd en geld kosten. Om deze redenen wilde ik tijdens mijn stage leren hoe ik mijn code op een professionele manier kan testen, zodat ik kan garanderen dat mijn code foutloos werkt.
+Het testen van software is zeer belangrijk. Als een bedrijf software oplevert waar veel en/of grote fouten in zitten, dan kan dit veel tijd en geld kosten. Om deze redenen wilde ik tijdens mijn stage leren hoe een bedrijf zoals Ranshuijsen hun software test, zodat ik deze zelfde methodes ook op mijn eigen projecten kan toepassen.
 
 # Werkwijze
 
