--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/9.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/9.md
@@ -1,19 +1,17 @@
 ﻿# Leerdoel 9 - Regels & Procedures
 ## Inleiding
-Na afloop van Week 2 wilde ik bekend zijn met de regels en procedures die RvL hanteert.
+Tijdens mijn stage wilde ik meer leren over de regels en procedures die een softwarebedrijf zoals Ranshuijsen hanteert. Deze pagina beschrijft de verschillende regels en procedures die mij tijdens mijn stage zijn opgevallen.
 
-Als onderdeel hiervan heb ik gelijk op de tweede dag van mijn stage gedaan door het succesvol maken van de Informatiebeveiliging Cursus die elke nieuwe medewerker en stagiair moet volgen.
+## Informatiebeveiligingscursus
+Als Ranshuijsen een nieuwe medewerker of stagair aanneemt, dan dienen zij altijd een informatiebeveilingscursus af te ronden. Deze cursus bevat informatie over hoe Ranshuijsen omgaat met informatieveiligheid, wat voor een wachtwoordbeleid zij hanteren, de procedures voor toegangsbeveiliging, en de Clean Desk (houd je werkplek netjes) en Clear Screen (vergrendel je scherm als je je werkplek verlaat) regels.
 
 De onderstaande screenshot laat zien dat ik alle modules en toetsen die bij deze cursus horen succesvol heb afgerond.
+
+![](\\Assets\\Images\\Cursus.png)  
  
 De cursus is opgebouwd uit verschillende teksten en videos met informatie. Na het doorlezen van sommige modules volgt er een korte toets met een aantal meerkeuzevragen over het materiaal van die module. Ik heb deze toetsen allemaal met een 10 afgerond.
 
-Deze cursus bevat een uitleg over de Algemene Verordening Gegevensbescherming (AVG), en hoe RvL hier mee omgaat. Hierbij werd mij ook een PDF van Het Blauwe Boekje gegeven, een boek dat extra uitleg geeft over de AVG met betrekking tot softwareontwikkeling.
-
-Ook bevat deze cursus onder andere het wachtwoordbeleid van RvL, de procedure voor toegangsbeveiliging, en de Clean Desk (houd je werkplek netjes) en Clear Screen (vergrendel je scherm als je je werkplek verlaat) regels.
-
-Na het afronden van deze cursus had ik een veel beter idee van de regels en procedures die RvL en waarschijnlijk ook andere software bedrijven hanteren. Een deel van de regels waren voor mij vrij vanzelfsprekend (bijvoorbeeld de Clear Screen regel), maar ik wist bijvoorbeeld nog niks over de procedure die gevolgd moet worden in het geval van een datalek.
-
+Deze cursus bevat een uitleg over de Algemene Verordening Gegevensbescherming (AVG), en hoe RvL hier mee omgaat. Hierbij staat ook een PDF van Het Blauwe Boekje, een boek dat extra uitleg geeft over de AVG met betrekking tot softwareontwikkeling.
 
 ## Feedback bedrijfsbegeleider/collega
 ## Reflectie
