--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/6.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/6.md
@@ -4,15 +4,15 @@ In mijn vrije tijd doe ik vrijwillergerswerk als moderator van de Minecraft comm
 
 Toen ik echter begon aan dit project, kwam ik er al snel achter dat een dergelijke bot veel complexer zou zijn dan ik had verwacht. Ik moest regelmatig mijn werk stilleggen omdat ik iets over het hoofd had gezien. Ook zat ik vaak stukken code te herschrijven, zonder veel vooruitgang te maken. Ik verloor daarom ook al snel mijn motivatie, en legde het project neer.
 
-Om te voorkomen dat ik ditzelfde probleem later opnieuw tegen kom, heb ik hier een leerdoel van gemaakt. Ik zou graag willen leren hoe grote, complexe systemen worden uitgeplant in een professionele omgeving, zodat ik deze kennis toe kan passen op mijn eigen projecten.
+Om te voorkomen dat ik ditzelfde probleem later opnieuw tegen kom, heb ik hier een leerdoel van gemaakt. Ik zou graag willen leren hoe bedrijven zoals Ranshuijsen grote, complexe systemen ontwerpen en plannen, zodat ik deze methodes ook bij mijn eigen projecten kan toepassen.
 
 ## Werkwijze
 
 
 ## Bewijsmateriaal
-Als bewijsmateriaal voor dit leerdoel heb ik een document opgezet waarin ik beschrijf wat mijn eerder genoemde idee inhoudt, wat voor een functionaliteit het systeem zal bevatten, en hoe het systeem is gestructureerd. Op basis van dit document zal ik in de toekomst eventueel alsnog aan het project kunnen beginnen.
+Als bewijsmateriaal voor dit leerdoel heb ik een document opgezet waarin ik beschrijf wat mijn eerder genoemde idee precies inhoudt, wat voor een functionaliteit het systeem zal bevatten, en hoe het systeem is gestructureerd. Dit document zal ik later kunnen gebruiken om alsnog dit systeem te bouwen.
 
-Dit document is [hier](Content/Stage3/Evidence/6) te vinden.
+Dit document is [hier](Content/Stage3/Bewijsmateriaal/6) te vinden.
 
 ## Feedback bedrijfsbegeleider/collega
 ## Reflectie
