--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/7.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/7.md
@@ -1,6 +1,6 @@
 ﻿# Leerdoel 7 - Design Patterns
 
-Ik heb tijdens het zoeken naar informatie voor mijn 1ste- en 2dejaars projecten meerdere malen de term Design Patterns voorbij zien komen, zonder echt te weten wat deze term precies inhield. Bij het vak Web Development werd het al een stukje duidelijker, omdat wij hierbij over het MVC-design pattern hadden geleerd. Ik wist echter dat er meer van deze design patterns waren, en wilde hier meer over leren.
+Ik heb tijdens het zoeken naar informatie voor mijn 1ste- en 2dejaars projecten meerdere malen de term Design Patterns voorbij zien komen, zonder echt te weten wat dit precies inhield. Bij het vak Web Development werd het al een stukje duidelijker, omdat wij hierbij over het MVC-design pattern hadden geleerd. Ik wist echter dat er meer van deze design patterns waren, en wilde hier meer over leren.
 
 Het bleek dat de twee technologieën die ik voor mijn stageopdracht moest gebruiken (ASP.NET Core en Blazor) beide gebruik maakte van Dependency Injection. Tijdens het werken aan mijn stageopdracht ben ik daarom ook al vrij snel hiermee in aanraking gekomen. Na informatie over Dependency Injection in ASP.NET Core op het Internet op te zoeken en een voorbeeld van een medewerker te analyseren, is het mij gelukt om mijn eigen service te bouwen. Deze service kan in verschillende onderdelen van het CRM worden geïnjecteerd om zo informatie over de ingelogde gebruiker op te kunnen halen.
 
@@ -16,7 +16,7 @@ Neem bijvoorbeeld de Model, View, Controller (MVC) design pattern. Deze design p
 ## Dependency Injection
 _Dependency Injection_ is ook een dergelijke design pattern. Applicaties die deze design pattern gebruiken zijn niet direct aan hun dependencies verbonden. In plaats daarvan worden ze "geinjecteerd"; er wordt een object van de dependency gemaakt, die vervolgens op meerdere plekken in de applicatie gebruikt wordt. Dit zorgt ervoor dat deze dependencies gemakkelijk kunnen worden nagemaakt en vervangen, zodat het makkelijker wordt om de applicatie te testen.
 
-Stel dat u een applicatie heeft ontwikkeld die data met een datum en tijdstip ontvangt van een externe dienst en daarmee een actie uitvoert. Het blijkt dat uw applicatie niet goed om kan gaan met schrikkeljaren, waardoor er steeds fouten in de applicatie optreden als er data met een datum van 29 Februari wordt ontvangen. U heeft echter geen controle over de externe dienst die de data verstuurd, waardoor het probleem moeilijk te reproduceren is.
+Stel dat u een applicatie heeft ontwikkeld die data met een datum en tijdstip ontvangt van een externe dienst en daarmee een actie uitvoert. Het blijkt dat uw applicatie niet goed om kan gaan met schrikkeljaren, waardoor er steeds fouten optreden als er data met een datum van 29 Februari wordt ontvangen. U heeft echter geen controle over de externe dienst die de data verstuurd, waardoor het probleem moeilijk te reproduceren is.
 
 Dit kan worden opgelost doormiddel van Dependency Injection. In plaats van dat de verbinding met de externe dienst direct aan uw applicatie is gekoppeld, wordt deze als object geinjecteerd. Dit object kan gemakkelijk worden vervangen met een namaak object, die altijd data genereert met een datum van 29 Februari. Op deze manier heeft u een manier om gemakkelijk het probleem te reproduceren, waardoor u makkelijk kan controleren of het probleem is verholpen.
 
